# history_search

./: .gitignore  Cargo.toml  LICENSE  README.md  README.org  toy.txt
.github/chglog/: release.yml
.github/workflows/: deploy.yaml
install/: install.sh
src/: history_search.bash  history_search.zsh  main.rs
