[package]
name = "history_search"
version = "0.1.0"
authors = ["Albert Lee <allee@myriad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
regex = "1.4.1"
skim = "0.9.2"
dirs = "3.0.1"
clipboard = "0.5.0"
lazy_static = "1.4.0"
